German/Lenguajes y compiladores/Lab3/tests/bad/bad04.imp
data N = O | S <N>

method suma (n : N, m : N) returns (r : N)
{
    var n1:N, m1:N
    -- undefined constructor
    r,n1,m1 := A [],n,m
} 

